[gd_scene load_steps=19 format=3 uid="uid://ln50r4xpe1ai"]

[ext_resource type="Script" uid="uid://bwg4lndgnlnd" path="res://scenes/main_game/land/land.gd" id="1_vyjhb"]
[ext_resource type="Shader" uid="uid://bdhxjruma11hn" path="res://scenes/main_game/field/field.gdshader" id="2_84ps5"]
[ext_resource type="Texture2D" uid="uid://c1l356n6od8ma" path="res://resources/sprites/objects/field.png" id="3_vqeok"]
[ext_resource type="Script" uid="uid://c42mdjgajw0gi" path="res://scenes/GUI/controls/buttons/gui_basic_button.gd" id="4_hk5wf"]
[ext_resource type="AudioStream" uid="uid://ctu3v3nqwt6d2" path="res://resources/sounds/SFX/field/field_hover.wav" id="5_skov6"]
[ext_resource type="AudioStream" uid="uid://b00jsu3na1sj0" path="res://resources/sounds/SFX/field/field_click.wav" id="6_1knfj"]
[ext_resource type="PackedScene" uid="uid://b0mxsb1ypllyg" path="res://scenes/main_game/field/gui_field_selection_arrow.tscn" id="7_x5mrl"]
[ext_resource type="AudioStream" uid="uid://d1akur2jywp1n" path="res://resources/sounds/SFX/plants/plant_down.wav" id="8_elml8"]
[ext_resource type="PackedScene" uid="uid://ddb85df6v6lo4" path="res://scenes/main_game/combat/world/water/water_droplet_emitter.tscn" id="9_xmjsh"]
[ext_resource type="Texture2D" uid="uid://bimh485w1wjhp" path="res://resources/sprites/effects/particles/water_droplet.png" id="10_hr6p8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wixvq"]
resource_local_to_scene = true
shader = ExtResource("2_84ps5")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_size = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_ipwbb"]
atlas = ExtResource("3_vqeok")
region = Rect2(0, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_rw11e"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipwbb")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipwbb"]
size = Vector2(34, 6)

[sub_resource type="Animation" id="Animation_rw11e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ipwbb"]
resource_name = "dip"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.3, 0.4),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_dip_down"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.08, 0.28, 0.4),
"transitions": PackedFloat32Array(2, 0.5, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rw11e"]
_data = {
&"RESET": SubResource("Animation_rw11e"),
&"dip": SubResource("Animation_ipwbb")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rw11e"]
polygon = PackedVector2Array(-16, 1, 16, 1, 16, 18, -16, 18)

[node name="Land" type="Node2D"]
script = ExtResource("1_vyjhb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
material = SubResource("ShaderMaterial_wixvq")
sprite_frames = SubResource("SpriteFrames_rw11e")
animation = &"idle"
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "res://resources/sprites/objects/",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://resources/sprites/objects/field.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "9faadb5015691615c2249d42dd0289de"

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ipwbb")

[node name="Container" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="GUIFieldButton" type="PanelContainer" parent="."]
unique_name_in_owner = true
offset_left = -17.0
offset_top = -26.0
offset_right = 17.0
offset_bottom = 15.0
script = ExtResource("4_hk5wf")
hover_sound = ExtResource("5_skov6")
click_sound = ExtResource("6_1knfj")
metadata/_custom_type_script = "uid://c42mdjgajw0gi"

[node name="GUIFieldSelectionArrow" parent="." instance=ExtResource("7_x5mrl")]
unique_name_in_owner = true
z_index = 1
offset_top = -35.0
offset_bottom = -35.0

[node name="PlantDownSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_elml8")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rw11e")
}

[node name="WaterDropletEmitter" parent="." instance=ExtResource("9_xmjsh")]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, 16)
droplet_texture = ExtResource("10_hr6p8")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_rw11e")
